<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_see_map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="10dip"
        android:text="@string/see_map"
        android:textColor="#fff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_blue"
                android:layout_width="fill_parent"
                android:layout_height="160dip"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="@string/blue_line"
                android:textColor="#fff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_orange"
                android:layout_width="fill_parent"
                android:layout_height="160dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:text="@string/orange_line"
                android:textColor="#fff"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_red"
            android:layout_width="fill_parent"
            android:layout_height="330dip"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_weight="1"
            android:text="@string/red_line"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_green"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:text="@string/green_line"
        android:textColor="#fff"
        android:textStyle="bold" />

</LinearLayout>